--- a/css/test03.css
+++ b/css/test03.css
@@ -74,7 +74,7 @@
 
 #main .mainEye {
     padding: 100px 0;
-    height: 100vh;
+    height: 90vh;
 }
 
 #main .mainEye .container {
@@ -291,3 +291,13 @@
     position: relative;
     z-index: 999;
 }
+
+.mainOther h2 {
+    text-align: center;
+    font-size: 40px;
+    font-weight: 700;
+    font-family: 'Libre Baskerville', serif;
+    color: #333;
+    margin: 0 0 30px 0;
+}
+
