--- a/css/test03.css
+++ b/css/test03.css
@@ -71,9 +71,19 @@
 
 #main .mainVisual .slogan h2 {
     font-family: 'Libre Baskerville', serif;
-    font-size: 65px;
+    font-size: 60px;
     font-weight: 900;
     color: #fff;
+    margin: 0 0 20px 0;
+    text-align: right;
+}
+
+#main .mainVisual .slogan p {
+    font-family: 'Libre Baskerville', serif;
+    font-size: 20px;
+    font-weight: 500;
+    color: #fff;
+    text-align: right;
 }
 
 #main .mainEye {
@@ -431,7 +441,7 @@
 
 #footer {
     position: relative;
-    z-index: 999;
+    z-index: 1001;
     background: #333;
 }
 
