--- a/css/test03.css
+++ b/css/test03.css
@@ -165,6 +165,7 @@
     margin: 0 0 10px 0;
     color: #f1f1f1;
     letter-spacing: 0.025em;
+    cursor: pointer;
 }
 
 .mainLip .container .inner .box p {
@@ -195,6 +196,7 @@
     font-size: 17px;
     font-weight: 500;
     color: #fff;
+    cursor: pointer;
 }
 
 .mainLip .container .inner .item02 h3 {
@@ -274,6 +276,7 @@
     margin: 0 0 10px 0;
     color: #444;
     letter-spacing: 0.025em;
+    cursor: pointer;
 }
 
 .mainFace .container .left p {
@@ -334,6 +337,7 @@
 }
 
 .mainFace .container .right .faceSlide figure img {
+    cursor: pointer;
     opacity: 0.5;
 }
 
@@ -384,6 +388,7 @@
 }
 
 .mainOther .container figure img {
+    cursor: pointer;
     transition: 0.5s;
 }
 
@@ -398,6 +403,7 @@
     text-align: center;
     letter-spacing: 0.025em;
     margin: 0 0 10px 0;
+    cursor: pointer;
 }
 
 .mainOther .container .content .txt .pay ul {
@@ -420,6 +426,7 @@
     font-size: 17px;
     font-weight: 500;
     color: #444;
+    cursor: pointer;
 }
 
 .mainFin {
